Fix box location on small screens

--- a/src/components/satellitetimeseriesmodal/satellitetimeseriesmodal.css
+++ b/src/components/satellitetimeseriesmodal/satellitetimeseriesmodal.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 30%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -30%);
   background-color: var(--box-color);
   z-index: 999999;
   border-radius: 16px;
